--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -73,7 +73,7 @@
 
       .hero__titleLine {
         transform: scaleY(1.3);
-        margin-bottom: -10px;
+        margin-bottom: -36px;
       }
     }
   }
